@@ -484,7 +484,7 @@ public class ProjectsGuiPlugin {
 
     // Keep only a limited number of last-used projects
     lastUsedProjects.remove(projectName);
-    lastUsedProjects.add(0, projectName);
+    lastUsedProjects.addFirst(projectName);
     if (lastUsedProjects.size() > LAST_USED_PROJECTS_MAX_ENTRIES) {
       lastUsedProjects = lastUsedProjects.subList(0, LAST_USED_PROJECTS_MAX_ENTRIES);
     }
@@ -826,7 +826,7 @@ public class ProjectsGuiPlugin {
     if (config.isEnvironmentsForActiveProject() && StringUtils.isEmpty(projectName)) {
       // list all environments and select the first one if we don't have a project selected
       List<String> allEnvironments = config.listEnvironmentNames();
-      updateEnvironmentToolItem(allEnvironments.get(0));
+      updateEnvironmentToolItem(allEnvironments.getFirst());
       return;
     }
 
@@ -879,7 +879,7 @@ public class ProjectsGuiPlugin {
     if (environment == null) {
       List<LifecycleEnvironment> environments = config.findEnvironmentsOfProject(projectName);
       if (!environments.isEmpty()) {
-        environment = environments.get(0);
+        environment = environments.getFirst();
       }
     }
 
@@ -931,8 +931,7 @@ public class ProjectsGuiPlugin {
       parentId = ID_CONTEXT_MENU_PROJECT_ADD,
       id = ID_CONTEXT_MENU_PROJECT_ADD_FROM_VC,
       label = "i18n::HopGui.Toolbar.Project.Add.FromVersionControl.Label",
-      toolTip = "i18n::HopGui.Toolbar.Project.Add.FromVersionControl.Tooltip",
-      image = "ui/images/add.svg")
+      toolTip = "i18n::HopGui.Toolbar.Project.Add.FromVersionControl.Tooltip")
   public void addProjectFromVersionControl() {
     addProjectFromVersionControlInternal();
   }
@@ -942,8 +941,7 @@ public class ProjectsGuiPlugin {
       parentId = ID_CONTEXT_MENU_PROJECT_ADD,
       id = ID_CONTEXT_MENU_PROJECT_ADD_FROM_EXISTING,
       label = "i18n::HopGui.Toolbar.Project.Add.FromExisting.Label",
-      toolTip = "i18n::HopGui.Toolbar.Project.Add.FromExisting.Tooltip",
-      image = "ui/images/add.svg")
+      toolTip = "i18n::HopGui.Toolbar.Project.Add.FromExisting.Tooltip")
   public void addProjectFromExistingSources() {
     addProjectFromExistingSourcesInternal();
   }
